Bug 298676 - Crash while editing code
Summary: Crash while editing code
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: 4.3.0
Assignee: kdevelop-bugs-null
URL:
Keywords:
: 290433 291818 298810 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-04-23 15:12 UTC by Alex Fiestas
Modified: 2013-03-10 06:29 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Backtrace (14.10 KB, application/octet-stream)
2012-04-23 15:12 UTC, Alex Fiestas
Details
New crash information added by DrKonqi (14.04 KB, text/plain)
2013-03-10 06:29 UTC, David Saunders
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Fiestas 2012-04-23 15:12:02 UTC
This crash happened to me at least 5 times (I have 5 .kcrash in my crash folder) so it is quite reproducible.

I was basically writting code when this happens.

Reproducible: Always
Comment 1 Alex Fiestas 2012-04-23 15:12:15 UTC
Created attachment 70602 [details]
Backtrace
Comment 2 Milian Wolff 2012-04-25 13:02:54 UTC
if it's reproducible, run kdevelop in valgrind and figure out whats crashing there, esp. whether m_view is still valid. If not, try to wrap it locally in a QWeakPointer and check whether that helps.

but a proper way to reproduce this would be helpful!
Comment 3 Milian Wolff 2012-04-25 17:29:09 UTC
*** Bug 298810 has been marked as a duplicate of this bug. ***
Comment 4 Milian Wolff 2012-04-25 17:30:26 UTC
*** Bug 290433 has been marked as a duplicate of this bug. ***
Comment 5 Milian Wolff 2012-04-25 17:30:44 UTC
*** Bug 291818 has been marked as a duplicate of this bug. ***
Comment 6 Milian Wolff 2012-04-30 13:08:03 UTC
Git commit 86f4848f9f6324540c0ca9c70dfd81ff0e6b1cfc by Milian Wolff.
Committed on 30/04/2012 at 14:47.
Pushed by mwolff into branch '4.3'.

fix crash in signature assistant when view gets closed before parse update

the question remains whether we might not want to delete the assistant before
the view anyways, similar to how we do it with the rename assistant

M  +1    -1    languages/cpp/codegen/signatureassistant.cpp
M  +1    -1    languages/cpp/codegen/signatureassistant.h

http://commits.kde.org/kdevelop/86f4848f9f6324540c0ca9c70dfd81ff0e6b1cfc
Comment 7 David Saunders 2013-03-10 06:29:12 UTC
Created attachment 77906 [details]
New crash information added by DrKonqi

kdevelop (4.3.1) on KDE Platform 4.8.5 (4.8.5) using Qt 4.8.2

- What I was doing when the application crashed:

Clicked on a tab to change to a different source file

-- Backtrace (Reduced):
#6  0x00007feb27dddad7 in Cpp::AdaptDefinitionSignatureAssistant::parseJobFinished (this=0x6c6abd0, job=0x6b57780) at /usr/src/debug/kdevelop-4.3.1/languages/cpp/codegen/signatureassistant.cpp:321
[...]
#8  0x00000035f747ec5f in KDevelop::BackgroundParser::parseJobFinished (this=this@entry=0x1c87ff0, _t1=0x6b57780) at /usr/src/debug/kdevplatform-1.3.1/x86_64-redhat-linux-gnu/language/backgroundparser.moc:240
#9  0x00000035f747f316 in KDevelop::BackgroundParser::parseComplete (this=0x1c87ff0, job=<optimized out>) at /usr/src/debug/kdevplatform-1.3.1/language/backgroundparser/backgroundparser.cpp:524
#10 0x00000035f7481884 in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=<optimized out>, _c=<optimized out>) at /usr/src/debug/kdevplatform-1.3.1/x86_64-redhat-linux-gnu/language/backgroundparser.moc:170
#11 KDevelop::BackgroundParser::qt_static_metacall (_o=0x1c87ff0, _c=97703360, _id=6350849, _a=0x1) at /usr/src/debug/kdevplatform-1.3.1/x86_64-redhat-linux-gnu/language/backgroundparser.moc:132