fix crash in signature assistant when view gets closed before parse update

the question remains whether we might not want to delete the assistant before
the view anyways, similar to how we do it with the rename assistant

BUG: 298676